<resources>
    <string name="app_name">JobHilfe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_user_profile_edit">UserProfileEditActivity</string>
    <string name="title_activity_auftrag_liste">AuftragListeActivity</string>
    <string name="registrieren">Registrieren</string>
    <string name="einloggen">Einloggen</string>
    <string name="titel_konto_erstellen">Ein Konto erstellen</string>
    <string name="konto_erstellen">Konto erstellen</string>
    <string name="kennwort">Kennwort</string>
    <string name="email">Email</string>
    <string name="benutzername">Benutzername</string>
    <string name="konto_anmelden">In Ihrem Konto anmelden</string>
    <string name="auftragsreferenz">Auftragsreferenz</string>
    <string name="titel">Titel</string>
    <string name="arbeitgeber">Arbeitgeber</string>
    <string name="stellenbeschreibung">Stellenbeschreibung</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="arbeitsort">Arbeitsort</string>
    <string name="beginn_taetig">Beginn der Tätigkeit</string>
    <string name="arbeitszeit">Arbeitszeit</string>
    <string name="vergütung">Vergütung und Zusatzleistung</string>
    <string name="geld">geld</string>
    <string name="kontaktdaten">Kontaktdaten:</string>
    <string name="telefonnummer">Telefonnummer:</string>
    <string name="offen_bewerbung">Öffenen Bewerbung:</string>
    <string name="bewerben">Bewerben</string>
    <string name="bewerbung_zurück">Bewerbung zurückziehen</string>
    <string name="ihre_titel">Ihr Titel</string>
    <string name="ihre_beschreibung">Ihre Stellenbeschreibung</string>
    <string name="ihre_arbeitsort">Ihre Arbeitsort</string>
    <string name="beginn_arbeit">Beginn der Arbeit</string>
    <string name="ihre_arbeitszeit">Ihre Arbeitszeit</string>
    <string name="ihre_verg_tung">Ihre Vergütung</string>
    <string name="auftrag_erstellen">Auftrag Erstellen</string>
    <string name="bewertung_abgeben">Bewertung Abgeben</string>
    <string name="nachricht_eingeben">Geben Sie Ihre Nachricht ein...</string>
    <string name="auftragstitel">Auftragstitel</string>
    <string name="aenderungen_speichern">Änderungen speichern</string>
    <string name="profil_bearbeiten">Profil bearbeiten</string>
    <string name="foto_aktualisieren">Foto aktualisieren</string>
    <string name="bewertung">Bewertung:</string>
    <string name="auftrag">Auftrag:</string>
    <string name="ihr_status">Ihr Status</string>
    <string name="ihr_name">Ihr Name</string>
    <string name="ihre_email">Ihre Email</string>
    <string name="ihre_telefonnummer">Ihre Telefonnummer</string>
    <string name="auftrag_titel">Auftrag_Titel</string>
    <string name="status">Status</string>
    <string name="zuletzt_gesehen">Zuletzt gesehen</string>
    <string name="nachrichten">Nachrichten</string>
    <string name="von">Von:</string>
    <string name="name">Name</string>
    <string name="benachrichtigung">Benachrichtigung</string>
    <string name="bewertung_von">Bewertung von :</string>
    <string name="bewertung_text">Bewertung Text</string>
    <string name="status_des_benutzers">Status des Benutzers</string>
    <string name="auftrag_id">Auftrag_id</string>
    <string name="name_arbeitgeber">Name des Arbeitgebers</string>
    <string name="wo_arbeiten">Wo arbeiten</string>
    <string name="wann_beginnt">Wann beginnt</string>
    <string name="wie_lange">Wie lange</string>

    <string name="offenen_bewerbung">Öffenen Bewerbung:</string>
    <string name="hint">hint</string>
    <string name="datum">datum</string>
    <string name="profil">Profil</string>
    <string name="auftragsliste">Auftragsliste</string>
    <string name="bewertungsliste">Bewertungsliste</string>
    <string name="abmelden">Abmelden</string>


</resources>
