<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luongtiendat.jobhilfe.UserProfileEditActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/profile_edit_appbar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_edit_appbar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:paddingTop="0dp">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/ihr_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_edit_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/user_edit_phone"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/ihre_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_edit_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/ihre_telefonnummer"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/user_save_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_edit_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="157dp"
        android:background="@color/btnSignActive"
        android:text="@string/aenderungen_speichern"
        android:textColor="@android:color/black" />

</RelativeLayout>
