<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luongtiendat.jobhilfe.EditAuftragActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/auftrag_bewerben_edit_appbar"
        />

    <ScrollView
        android:layout_width="367dp"
        android:layout_height="551dp"
        app:layout_constraintTop_toBottomOf="@+id/auftrag_bewerben_edit_appbar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_below="@+id/auftrag_bewerben_edit_appbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auftrag_titel_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="14dp"
                android:paddingTop="0dp"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/auftrag_stellen_beschreibung_edit">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/auftragstitel" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auftrag_stellen_beschreibung_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_titel_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/user_edit_phone"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/stellenbeschreibung"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auftrag_arbeit_ort_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_stellen_beschreibung_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/arbeitsort"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auftrag_arbeit_zeit_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_arbeit_ort_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/arbeitszeit"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/auftrag_vergutung_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_arbeit_zeit_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/vergütung"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/auftrag_edit_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="43dp"
                android:background="@color/btnSignActive"
                android:text="@string/aenderungen_speichern"
                android:textColor="@android:color/black"
                android:layout_below="@+id/auftrag_vergutung_edit"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
